<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018. 代码著作权归卢声波所有。
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/open"
        android:icon="@drawable/ic_folder_open_white_24dp"
        android:title="@string/open"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/data_syn"
        android:icon="@drawable/ic_sync_white_24dp"
        android:title="@string/data_synchronization"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_save_white_24dp"
        android:title="@string/save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/email"
        android:icon="@drawable/ic_email_white_24dp"
        android:title="@string/send_email"
        app:showAsAction="ifRoom" />

</menu>