<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018. 代码著作权归卢声波所有。
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rl_gray"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <RelativeLayout
            android:id="@+id/rl_back"
            android:layout_width="50dp"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@mipmap/back"
                android:src="@mipmap/back" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/tv_project"
            android:textColor="@color/tv_black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/bt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="19sp"
            android:layout_marginRight="19sp"
            android:text="@string/save"
            android:textColor="@color/them_color" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_peont"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_below="@+id/rl_title">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_kl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/tv_time" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/tv_kl"
            android:layout_toRightOf="@+id/tv_kl" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_km"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_below="@+id/rl_peont">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_lp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/tv_leixin" />

        <TextView
            android:id="@+id/tv_leixing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/tv_lp"
            android:layout_toRightOf="@+id/tv_lp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@android:color/darker_gray" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ly_js"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_below="@+id/rl_km"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/tv_height" />

        <TextView
            android:id="@+id/tv_zhuijian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/tv_zhuiji" />

        <TextView
            android:id="@+id/tv_cebi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/tv_cb" />

        <TextView
            android:id="@+id/tv_xiedu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/tv_xiedu" />
    </LinearLayout>

    <ListView
        android:id="@+id/rl_showAll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ly_js"></ListView>

</RelativeLayout>