<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018. 代码著作权归卢声波所有。
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="model"
            type="www.jingkan.com.view.adapter.ItemWirelessTestResultData" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp">


        <TextView
            android:id="@+id/tt_project_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/project_number" />

        <TextView
            android:id="@+id/project_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tt_project_number"
            android:gravity="center_vertical"
            android:text="@{model.projectNumber}"
            android:textColor="@color/text_content" />

        <TextView
            android:id="@+id/tt_hole_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/hole_number"
            android:gravity="center_vertical"
            android:text="@string/hole_number" />

        <TextView
            android:id="@+id/hole_number"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_toStartOf="@+id/more"
            android:gravity="center_vertical"
            android:text="@{model.holeNumber}"
            android:textColor="@color/text_content" />


        <TextView
            android:id="@+id/tt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tt_project_number"
            android:layout_marginTop="4dp"
            android:text="@string/testDate" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tt_project_number"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/tt_date"
            android:text="@{model.testDate}"
            android:textColor="@color/text_content" />

        <ImageView
            android:id="@+id/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:src="@mipmap/next" />
    </RelativeLayout>


</layout>