<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018. 代码著作权归卢声波所有。
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <RelativeLayout
            android:id="@+id/rl_back"
            android:layout_width="50dp"
            android:layout_height="50dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@mipmap/back"
                android:src="@mipmap/back" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/bt_addcommon"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_body"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_below="@+id/rl_title"
        android:background="@color/rl_gray" >
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_plosn"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_below="@+id/rl_body" >

        <TextView
            android:id="@+id/tv_qul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/tv_lx"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_leixing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/tv_qul"
            android:layout_toRightOf="@+id/tv_qul"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_yas"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_below="@+id/rl_plosn"
        android:background="@color/rl_gray" >
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_gg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/rl_yas" >

        <TextView
            android:id="@+id/tv_oas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/tv_xulie"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/et_sn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/tv_oas"
            android:layout_toRightOf="@+id/tv_oas"
            android:background="@null"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/rl_gray" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_gis"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/rl_gg" >

        <TextView
            android:id="@+id/tv_qsk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/tv_id"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/et_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/tv_qsk"
            android:layout_toRightOf="@+id/tv_qsk"
            android:background="@null"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_lop"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_below="@+id/rl_gis"
        android:background="@color/rl_gray" >
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fl_bobo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_add"
        android:layout_below="@+id/rl_lop" >
    </FrameLayout>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@color/them_color"
        android:text="@string/bt_addOK"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</RelativeLayout>